# marketing-os

./: .gitignore  README.md  create_structure.ps1  pyrightconfig.json
.claude/: settings.local.json
marketingos/: .coverage  .env.example  README.md  coverage.xml  pyproject.toml  pyrightconfig.json
marketingos/config/: agents.yaml  base.yaml  budget.yaml  models.yaml  workflow.yaml
marketingos/docs/: CAMPAIGN_OUTPUT.md  REPRODUCE_README.md
marketingos/docs/architecture/adr/: 0001-cost-guard-import-direction.md
marketingos/src/marketingos/: __init__.py
marketingos/src/marketingos/agents/: __init__.py  base.py  business_analysis.py  copywriter.py  designer.py  packaging.py  planner.py  qa.py  research.py  strategist.py  synthetic_resource.py  video_director.py
marketingos/src/marketingos/api/: dependencies.py  main.py
marketingos/src/marketingos/api/routes/: outputs.py
marketingos/src/marketingos/api/schemas/: __init__.py
marketingos/src/marketingos/config/: __init__.py  loader.py  settings.py
marketingos/src/marketingos/evaluation/: __init__.py  harness.py  models.py  registry.py  scorer.py  spec.py  validator.py
marketingos/src/marketingos/exceptions/: __init__.py  agent.py  base.py  budget.py  config.py  storage.py  tool.py  validation.py  workflow.py
marketingos/src/marketingos/memory/: __init__.py  schemas.py  store.py
marketingos/src/marketingos/memory/backends/: __init__.py  sqlite_backend.py  vector_backend.py
marketingos/src/marketingos/models/: __init__.py  business_context.py  cost.py  creative.py  plan.py  run.py  strategy.py
marketingos/src/marketingos/orchestration/: __init__.py  approval_gates.py  checkpointer.py  edges.py  graph.py  state.py
marketingos/src/marketingos/orchestration/nodes/: __init__.py  nodes.py
marketingos/src/marketingos/prompts/: __init__.py  exceptions.py  loader.py  models.py  registry.py  renderer.py  versioning.py
marketingos/src/marketingos/prompts/policies/: facts_vs_assumptions.jinja  grounding_base.jinja  grounding_flexible.jinja
marketingos/src/marketingos/prompts/templates/business_analysis/v1/: system.jinja
marketingos/src/marketingos/prompts/templates/copywriter/v1/: metadata.yaml  system.jinja
marketingos/src/marketingos/prompts/templates/designer/v1/: metadata.yaml  system.jinja
marketingos/src/marketingos/prompts/templates/packaging/v1/: metadata.yaml  system.jinja
marketingos/src/marketingos/prompts/templates/planner/v1/: metadata.yaml  week_plan_system.jinja
marketingos/src/marketingos/prompts/templates/research/v1/: metadata.yaml  system.jinja
marketingos/src/marketingos/prompts/templates/strategist/v1/: first_week_system.jinja  metadata.yaml
marketingos/src/marketingos/services/: __init__.py  approval_service.py  cost_guard.py  cost_ledger.py  packaging_service.py  run_manager.py
marketingos/src/marketingos/tools/: __init__.py  base.py  factory.py  registry.py
marketingos/src/marketingos/tools/image/: __init__.py  compositor.py  flux_schnell_client.py  image_gen_client.py  placeholder_image_client.py
marketingos/src/marketingos/tools/llm/: __init__.py  gemini_client.py
marketingos/src/marketingos/tools/video/: __init__.py  placeholder_video_client.py  video_assembler.py
marketingos/src/marketingos/tools/web/: __init__.py  _compliance.py  _html.py  instagram_public_reader.py  website_scraper.py
marketingos/tests/unit/: .coverage  coverage.xml  test_cost_guard.py  test_env_loading.py  test_flux_schnell_client.py  test_gemini_retry.py  test_outputs_route.py  test_packaging_qa_gate.py  test_placeholder_video_client.py  test_plan.py  test_policy_composition.py  test_provider_factory.py  test_settings.py  test_website_scraper.py
marketingos/tests/unit/evaluation/: conftest.py  test_harness.py  test_scorer.py  test_validator.py
(+16 files in other folders)
