[project]
name = "marketingos"
version = "0.1.0"
description = "Production-grade AI multi-agent system for marketing orchestration"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "MarketingOS Team" }]
keywords = ["ai", "agents", "langgraph", "fastapi", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.45",
    "langchain-core>=0.3.15",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.2",
    "jinja2>=3.1.4",
    "loguru>=0.7.2",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "typing-extensions>=4.12.2",
    # tools/image: local dimension/format normalization (Compositor) and
    # Gemini image-generation post-processing (GeminiImageClient).
    "pillow>=11.0.0",
    # tools/video: programmatic MoviePy/OpenCV assembly (VideoAssembler),
    # not generative text-to-video — see the architecture doc, section 2.
    # Requires an `ffmpeg` binary on the host/container; not a pip package,
    # so it isn't and can't be listed here.
    "moviepy>=2.1.0",
    # tools/video: VideoAssembler builds per-shot frames as numpy arrays
    # before handing them to MoviePy. moviepy already depends on numpy
    # transitively; pinned directly here because this codebase imports it
    # explicitly, not just through moviepy's internals.
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "types-PyYAML>=6.0.12.20240917",
]

postgres = [
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.3",
]

[project.scripts]
marketingos = "marketingos.api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketingos"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["marketingos"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
pretty = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain_core.*",
    "moviepy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
-ra
-q
--cov=marketingos
--cov-report=term-missing
--cov-report=xml
"""

[tool.coverage.run]
source = ["marketingos"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]